refactor: remove warning